--- a/src/css/login.css
+++ b/src/css/login.css
@@ -170,60 +170,33 @@ body {
     }
 }
 
-.btn {
-    box-sizing: border-box;
-    border: 0;
-    border-radius: 20px;
+.shadow__btn {
+    margin-top: 20px;
+    padding: 7px 15px;
+    border: none;
+    font-size: 17px;
     color: #fff;
-    padding: 1em 1.8em;
-    background: #645bff;
-    display: flex;
-    transition: 0.2s;
-    align-items: center;
-    gap: 0.6em;
-    font-weight: bold;
+    border-radius: 7px;
+    letter-spacing: 4px;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: 0.5s;
+    transition-property: box-shadow;
 }
 
-.btn .arrow-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.shadow__btn {
+    background: rgb(0, 140, 255);
+    box-shadow: 0 0 25px rgb(0, 140, 255);
 }
 
-.btn .arrow {
-    margin-top: 1px;
-    width: 10px;
-    background: #645bff;
-    height: 2px;
-    position: relative;
-    transition: 0.2s;
+.shadow__btn:hover {
+    box-shadow: 0 0 5px rgb(0, 140, 255),
+        0 0 25px rgb(0, 140, 255),
+        0 0 50px rgb(0, 140, 255),
+        0 0 100px rgb(0, 140, 255);
 }
 
-.btn .arrow::before {
-    content: "";
-    box-sizing: border-box;
-    position: absolute;
-    border: solid #fff;
-    border-width: 0 2px 2px 0;
-    display: inline-block;
-    top: -3px;
-    right: 3px;
-    transition: 0.2s;
-    padding: 3px;
-    transform: rotate(-45deg);
-}
 
-.btn:hover {
-    background-color: #111;
-}
-
-.btn:hover .arrow {
-    background: #fff;
-}
-
-.btn:hover .arrow:before {
-    right: 0;
-}
 
 .button {
     position: relative;
