--- a/src/css/login.css
+++ b/src/css/login.css
@@ -4,7 +4,7 @@ this is meant to be wide supported and it really depends on you browsers
 if i realize any way to stylize the eye it could be added in the future
 in other input type*/
 body {
-    background-color: #e8e8e8;
+    background-color: #fff;
 }
 
 .container {
